implementacion metodos servicio pedido
- Se implementaron todos los metodos del servicio
- se agregaron los metodos de filtrado por estado y fecha